Bug 793308: Remove unneeded/unused "#include string.h" from some SVG c++ files. r=longsonr