content/svg/content/src/SVGPointList.cpp
@@ -13,7 +13,6 @@
 #include "nsSVGElement.h"
 #include "nsTextFormatter.h"
 #include "prdtoa.h"
-#include "string.h"
 #include "SVGAnimatedPointList.h"
 #include "SVGContentUtils.h"
 
